--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="icon" type="favicon" href="icon.jpg" type="image">
+    <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>E-Meals | Buy Your Favourite Food Online</title>
   </head>
