--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
 <!-- code for main menu -->
 <div class="container col-xxl-8 px-2 py-2">
-    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5 imgBox">
       <div class="col-5 col-sm-8 col-lg-5">
-        <img src="food1.jpg" class="d-block mx-lg-auto img-fluid" alt="Header Image" width="400" height="200" loading="lazy">
+        <img src="food1.jpg" class="d-block mx-lg-auto img-fluid imgCont" alt="Header Image" width="400" height="200" >
       </div>
       <div class="col-lg-6">
         <h1 class="display-5 fw-bold lh-1 mb-3">Imagine That Your Favourite Food get's Online</h1>
